--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,5 +1,5 @@
-.centered-box {
-    position: fixed; /* or absolute if you want it to scroll with the page */
+.formWrapper {
+    position: fixed;
     top: 50%;
     left: 50%;
     width: 1000px;
