--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -33,4 +33,16 @@
 
 }
 
+#head {
+    position: relative;
+}
+
+
+#head button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+
+}
+
 
